--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,14 +1,22 @@
-.banner{
-    background-image: url('http://www.nicdarkthemes.com/themes/education/html/demo/e-learning/img/parallax/img7.jpg');
-    height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-}
+
 .inner_content{
-    padding-top: 150px;
+    padding-top: 90px;
 }
 #service > h1 {
 	padding: 15px;
+	text-align: center;
+}
+.banner {
+	height: 599px;
+}
+.banner img {
+	width: 100%;
+	height: 100%;
+}
+.inner_content {
+	position: absolute;
+	top: 0%;
+	left: 50%;
+	transform: translate(-50%,75%);
 	text-align: center;
 }
